import java.util.ArrayList;

public interface ILibrarySystem {
    public void checkoutBook(ArrayList<Book> books, Borrower borrower);

    public void returnBook(Book book);

    public void addBook(Book book);

    public void removeBook(Book book);

    public ArrayList<Book> getBooksByAuthor(String author);

    public ArrayList<Book> getBooksBySubject(String subject);

    public ArrayList<Book> getCheckedoutBookByBorrower(Borrower borrower);

    public Borrower getBorrowerByBook(Book book);
}
