public class User {
    public String name;
    public String role;

    public User(String name){
        this.name = name;
    }
}
